--- a/main.css
+++ b/main.css
@@ -1,14 +1,28 @@
 #header {
-    position: relative;
-    text-align: center;
+    margin: 10px auto;
     width: 480px;
     height: 600px;
 }
 
+#outer {
+    width: 100%;
+    height: 100%;
+}
+
+#inner {
+    display: table-cell;
+    text-align: center;
+}
+
+p#hint {
+    position: relative;
+    top: 400px;    
+    /* left: 50px; */
+}
+
 #button-group {
     position: absolute;
-    top: 0px;
-    align-self: center;
+    top: 0px;    
     background: lightgoldenrodyellow;   
     display:none;
 }
